solc_mutator_ossfuzz_seed_corpus/test_sol/test_24db33e3e1b7612842832d99f634fd51c2caa0d319dfb9573611e35308d509db_c56dc0d81487a9dbe56f0f872cde3675f837aab8_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0()    
{
  function (bool, bool, bytes14[][][2][3] memory) external   l0;
  function (uint152, int160, bytes memory) external   returns (bool) l1;
  delete l1;
}
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
contract C0 {
  uint176  public s0 = uint176(95780971304118053647396689196894323976171195136475135);
  event ev0(int184[6] indexed ep0, string indexed ep1);
  receive() external virtual  payable
  {
  }
}
error er0();
contract C1 {
  bool   s1;
  bytes25 immutable  s2 = bytes25(0xf887899dbb13641f47e647bf210df75373bd0ab03ad5a4c0fc);
  address payable  public s3;
  constructor(bool i0,address payable i1) payable  {
    s1 = (int136((~(int248(0)))) > ((int136(0) - int136(-12142281007544084477633537987831015749330)) % int136(15754427335866857135678546961667864890942)));
    s3 = payable(address(this));
    unchecked {
      address payable  l0 = s3;
      address payable  l1 = l0;
      assert(l1 == s3);
      bool  l2 = s1;
      bool  l3 = l2;
      assert(l3 == s1);
      (bool l4, bytes memory l5) = address(this).call(bytes("ffffff00"));
      revert er0();
    }
  }
  function f2(bytes25 i0,bool i1) external virtual   returns(bool o0,bool o1)
  {
    bytes25  l0 = s2;
    bytes25  l1 = l0;
    assert(l1 == s2);
    bool  l2 = s1;
    bool  l3 = l2;
    assert(l3 == s1);
    revert(string("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffb6c787c735591380ab5756365fef03efc4f5bd58"));
  }
}
pragma solidity >= 0.0.0;
// ----
// Warning 2072: (su0.sol:22-83): Unused local variable.
// Warning 5667: (su1.sol:378-385): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:386-404): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su1.sol:783-790): Unused local variable.
// Warning 2072: (su1.sol:792-807): Unused local variable.
// Warning 5667: (su1.sol:894-904): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:905-912): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:941-948): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su1.sol:949-956): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2018: (su0.sol:0-172): Function state mutability can be restricted to pure
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
